<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.crest.driver.Login">

    <include layout="@layout/action_bar_home"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/layout_margin"
        android:orientation="vertical"
       >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hint_change_password_old"
                android:maxLength="10"

                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/et_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorGrey"></View>

            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_et"
                android:background="@android:color/transparent"
                android:hint="@string/hint_chabge_password_new"
                android:singleLine="true"
                android:maxLength="10"

                android:inputType="textPassword"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/et_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorGrey"></View>

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_et"
                android:inputType="textPassword"
                android:maxLength="10"
                android:background="@android:color/transparent"
                android:hint="@string/hint_change_password_confirm"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/et_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginTop="10dp"
                android:background="@color/colorGrey"></View>



            <Button
                android:id="@+id/bt_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="@dimen/margin_button"
                android:background="@drawable/black_button"
                android:text="@string/button_change_password_save"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


