<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.crest.driver.Login">

    <include layout="@layout/action_bar_home"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/layout_margin"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_taxi" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hint_reset_password_auth"
                android:singleLine="true"
                android:inputType="number"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/et_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorGrey"></View>

            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_et"
                android:background="@android:color/transparent"
                android:hint="@string/hint_reset_password_password"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/et_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorGrey"></View>

            <EditText
                android:id="@+id/et_retry_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_et"
                android:background="@android:color/transparent"
                android:hint="@string/hint_reset_password_conf_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/et_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:background="@color/colorGrey"></View>



            <Button
                android:id="@+id/bt_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="@dimen/margin_button"
                android:background="@drawable/black_button"
                android:text="@string/button_signup_submit"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
