<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.crest.driver.Login">

    <include layout="@layout/action_bar_home"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_taxi" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:paddingTop="16dp"
                    android:src="@drawable/user_add" />

                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_signup_fullname"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="@dimen/et_text"
                    android:inputType="text"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGrey"></View>

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_et"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_signup_email"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="@dimen/et_text" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGrey"></View>


                <EditText
                    android:id="@+id/et_vehicle_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_et"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_signup_vehicle_no"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="@dimen/et_text" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGrey"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Select vehicle type :"
                        android:textSize="10dp"
                        android:textColor="@color/colorButton" />

                    <Spinner
                        android:id="@+id/spinner_vehicle_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@color/colorWhite"></Spinner>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGrey"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tv_rc_book_photo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_signup_upload_rc_book"
                        android:singleLine="true"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGrey"
                        android:textSize="@dimen/et_text" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:gravity="end">

                        <ImageView
                            android:id="@+id/iv_rc_book"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:paddingBottom="6dp"
                            android:paddingLeft="6dp"
                            android:src="@drawable/ic_upload"
                            android:tint="@color/colorButton" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGrey"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tv_puc_photo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_signup_upload_puc_photo"
                        android:singleLine="true"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGrey"
                        android:textSize="@dimen/et_text" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:gravity="end">

                        <ImageView
                            android:id="@+id/iv_puc_photo"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:paddingBottom="6dp"
                            android:paddingLeft="6dp"
                            android:src="@drawable/ic_upload"
                            android:tint="@color/colorButton" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGrey"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tv_vehicle_insurance_photo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_signup_upload_vehicle_photo"
                        android:singleLine="true"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGrey"
                        android:textSize="@dimen/et_text" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:gravity="end">

                        <ImageView
                            android:id="@+id/iv_vehicle_photo"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:paddingBottom="6dp"
                            android:paddingLeft="6dp"
                            android:src="@drawable/ic_upload"
                            android:tint="@color/colorButton" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGrey"></View>

                <EditText
                    android:id="@+id/et_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_et"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_signup_mo_no"
                    android:inputType="number"
                    android:singleLine="true"
                    android:text="1234567890"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="@dimen/et_text" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGrey"></View>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tv_change_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@android:color/transparent"
                        android:hint="CHANGE PASSWORD : "
                        android:singleLine="true"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGrey"
                        android:textSize="@dimen/et_text" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:gravity="end">

                        <ImageView
                            android:id="@+id/iv_edit"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:paddingBottom="6dp"
                            android:paddingLeft="6dp"
                            android:src="@drawable/ic_edit"
                            android:tint="@color/colorButton" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGrey"></View>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="@dimen/margin_button"
                    android:background="@drawable/black_button"
                    android:text="SAVE"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
